<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <!-- Backdrop -->
        <ImageView
            android:id="@+id/backdrop_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MovieDetailActivity">

                <androidx.cardview.widget.CardView
                    android:id="@+id/poster_cardview"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <!-- Poster -->
                    <ImageView
                        android:id="@+id/poster_iv"
                        style="@style/ListShowPoster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <!-- Average circle -->
                    <ImageView
                        android:layout_width="@dimen/poster_rating"
                        android:layout_height="@dimen/poster_rating"
                        android:layout_margin="8dp"
                        android:background="@drawable/circle" />

                    <!-- Average circle score -->
                    <TextView
                        android:id="@+id/vote_average_tv"
                        android:layout_width="@dimen/poster_rating"
                        android:layout_height="@dimen/poster_rating"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        tools:text="6.5" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    style="@style/WrapContent"
                    android:layout_margin="16dp"
                    android:layout_toEndOf="@id/poster_cardview"
                    android:orientation="vertical">

                    <!-- Title -->
                    <TextView
                        android:id="@+id/title_tv"
                        style="@style/ShowTitle"
                        tools:text="@string/tools_title" />

                    <!-- Score header -->
                    <TextView
                        style="@style/ShowDetailHeader"
                        android:text="@string/score" />

                    <!-- Score -->
                    <TextView
                        android:id="@+id/score_tv"
                        style="@style/ShowDetailContent"
                        tools:text="@string/tools_score" />

                    <!-- Release date header -->
                    <TextView
                        style="@style/ShowDetailHeader"
                        android:text="@string/release_date" />

                    <!-- Release date -->
                    <TextView
                        android:id="@+id/release_date_tv"
                        style="@style/ShowDetailContent"
                        tools:text="@string/tools_release_date" />

                    <!-- Language header -->
                    <TextView
                        style="@style/ShowDetailHeader"
                        android:text="@string/language" />

                    <!-- Language -->
                    <TextView
                        android:id="@+id/language_tv"
                        style="@style/ShowDetailContent"
                        tools:text="@string/tools_language" />

                </LinearLayout>

                <!-- Plot -->
                <TextView
                    android:id="@+id/plot_tv"
                    style="@style/ShowDetailContent"
                    android:layout_below="@id/poster_cardview"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="8"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    tools:text="@string/tools_plot" />

                <!-- Reviews -->
                <LinearLayout
                    android:id="@+id/review_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/plot_tv"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ShowDetailHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews" />

                    <TextView
                        android:id="@+id/review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:maxLines="3"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        tools:text="@string/tools_review" />

                </LinearLayout>

                <!-- Trailers -->
                <LinearLayout
                    android:id="@+id/trailer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/review_layout"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ShowDetailHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/trailers" />

                    <LinearLayout
                        android:id="@+id/trailer_layout_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>